--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ h1 {
 .button-style {
   color: #fff;
   /* Button Text */
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-style: normal;
   line-height: 1.5;
